@@ -276,12 +276,16 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
+    TAJO-693: StatusUpdateTransition in QueryUnitAttempt handles TA_UPDATE 
+    incorrectly. (hyunsik)
+
     TAJO-687: TajoMaster should pass tajoConf to create catalogServer. 
     (DaeMyung Kang via jihoon)
 
     TAJO-690: infinite loop occurs when rack task is assigning. (jinho)
 
-    TAJO-689: NoSuchElementException occurs during assigning the leaf tasks. (jinho)
+    TAJO-689: NoSuchElementException occurs during assigning the leaf tasks. 
+    (jinho)
 
     TAJO-651: HcatalogStore should support (de)serialization of RCFile. (jinho)
 
@@ -295,7 +299,8 @@ Release 0.8.0 - unreleased
     TAJO-665: sort buffer size must be dealt as long type values. 
     (hyoungjunkim via hyunsik)
 
-    TAJO-427: Empty table makes IndexOutOfBoundsException at LEFT OUTER JOIN clause. (jaehwa)
+    TAJO-427: Empty table makes IndexOutOfBoundsException at LEFT OUTER JOIN 
+    clause. (jaehwa)
 
     TAJO-650: Repartitioner::scheduleHashShuffledFetches should adjust the
     number of tasks. (hyunsik)
